manifast-file/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: clients-api-ns
spec:
  selector:
    app: backend
  ports:
    - port: 80
      targetPort: 5050
  type: ClusterIP
  clusterIP: None
